# SysmonForLinux

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOP.md  GJ sudo  INSTALL.md  LICENSE  README.md  azure-pipelines.yml  diag_script.sh  eula.h  extractMsgMc.sh  extractMsgOp.sh  hexdump.c  hexdump.h  installer.c  installer.h  linuxHelpers.cpp  linuxHelpers.h  linuxTypes.h  linuxVersion.h.in  linuxWideChar.c  linuxWideChar.h  makePackages.sh  missingdefs.h  networkTracker.cpp  networkTracker.h  outputxml.c  outputxml.h  sysmon.d  sysmon.service  sysmon_defs.h  sysmonforlinux.c  vmlinux.h  vmlinux_kern_diffs.h
.container/: Dockerfile_Ubuntu  install-rocky-dependencies.sh  install-ubuntu-dependencies.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: scorecard.yml
checkEBPFsizes/: checkEBPFsizes.c
doc/: 01_introduction_to_eBPF.md  02_tracepoints_etc.md  03_perf_ring_buffer.md  04_reading_memory.md  05_verifier.md  06_networking.md  07_example_programs.md
doc/examples/execve_example/: CMakeLists.txt  README.md  event_defs.h  kern.c  user.c
doc/examples/openat_example/: CMakeLists.txt  README.md  event_defs.h  kern.c  user.c
doc/examples/process_exit_example/: CMakeLists.txt  README.md  event_defs.h  kern.c  user.c
docs/adr/: 0000-Build-Sysmon-For-Linux-on-EBPF.md  0001-Share-config-with-Sysmon.md  0002-Use-Sysmon-Text-Template-approach-to-specifying-config-schemas.md  0003-Use-Sysmon-internal-configuration-data-structures.md  0004-Reimplement-config-loader-using-open-source-XML-library.md  0005-Refactor-and-use-existing-filtering.md  0006-Derisk-XML-library.md  template.md
ebpfKern/: HEADER  makeEvent.sh  sysmonCloseFD.c  sysmonCloseFD_rawtp.c  sysmonCloseFD_tp.c  sysmonEBPF_common.h  sysmonEBPFkern4.15.c  sysmonEBPFkern4.16.c  sysmonEBPFkern4.17-5.1.c  sysmonEBPFkern5.2.c  sysmonEBPFkern5.3-5.5.c  sysmonEBPFkern5.6-.c  sysmonFileCreate.c  sysmonFileCreate_rawtp.c  sysmonFileCreate_tp.c  sysmonFileDelete.c  sysmonFileDeleteAt.c  sysmonFileDeleteAtCwd.c  sysmonFileDeleteAtCwd_rawtp.c  sysmonFileDeleteAtCwd_tp.c  sysmonFileDeleteAt_rawtp.c  sysmonFileDeleteAt_tp.c  sysmonFileDelete_rawtp.c  sysmonFileDelete_tp.c  sysmonFileOpen.c  sysmonFileOpen_rawtp.c  sysmonFileOpen_tp.c  sysmonGenericEntry_rawtp.c  sysmonGenericEntry_tp.c  sysmonHelpers.c  sysmonProcAccessed.c  sysmonProcAccessed_rawtp.c  sysmonProcAccessed_tp.c  sysmonProcCreate.c  sysmonProcCreate_rawtp.c  sysmonProcCreate_tp.c  sysmonProcTerminated.c  sysmonTCPaccept.c  sysmonTCPaccept_rawtp.c  sysmonTCPaccept_tp.c  (+10 more)
package/DEBIAN/: postrm  prerm
package/DEBIAN.in/: control.in
package/SPECS.in/: spec.in
package/usr/share/man/man8/: sysmon.8
perftest/: README.md  TracepointComparisons.md  perf.csv  perf2.csv  perfSysmon.csv
perftest/tests/: audit.rules  auditbeat.rules  auditbeat.yml  auditdenriched.conf  auditdlaurel.conf  auditdraw.conf  go-audit.yaml  laurel.conf  onlyProcCreate.xml  testAuditbeat.sh  testAuditdNoRules.sh  testAuditdenriched.sh  testAuditdraw.sh  testGoaudit.sh  testLaurel.sh  testNoAudit.sh  testSysmon.sh
perftest/tests/execPerSec/: execPerSec.c
prototype/: CMakeLists.txt  LICENSE  README.md  TODO  outputxml.c  outputxml.h  parsexml.c  parsexml.h  proc_create.xml  syscalls.conf  syscalls.rules  sysmon.c  sysmon_config.h.in  sysmon_defs.h  sysmon_offsets.conf
prototype/ebpf_loader/: CMakeLists.txt  ebpf_telemetry_loader.c  ebpf_telemetry_loader.h
prototype/ebpf_loader/ebpf_kern/: ebpf_kern_common.h  ebpf_kern_helpers.c  ebpf_kern_raw_tp.c  ebpf_kern_tp.c  ebpf_telemetry_kern_raw_tp.c  ebpf_telemetry_kern_raw_tp_noloops.c  ebpf_telemetry_kern_raw_tp_sub4096.c  ebpf_telemetry_kern_tp.c
prototype/get_offsets/: Makefile  README.md  get_offsets.c
sysmonLogView/: README.md  sysmonGetEventName.c  sysmonLogView.cpp
templates/: build.yaml
test/: linuxRules.cpp  mysleep.c
